<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Button-Event-Handler</string>
    
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    
    <string name="anfangstext">In dieses TextView-Element schreibt jeder Event-Handler bei Ausführung genau eine Zeile.</string>

</resources>
