<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout android:id="@+id/grid_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="5dp"
        android:columnCount="3"
        android:orientation="horizontal" >

        <Button android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_1" />

        <Button android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_2" />

        <Button android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_3" />

        <Button android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_4" />

        <Button android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="meineMethode"
            android:text="@string/button_5" />
        <!-- Button 5 deklariert seine Event-Handler-Methode über das XML-Attribut "android:onClick" -->

    </GridLayout>

    <TextView android:id="@+id/textview_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/grid_layout_1"
        android:layout_alignParentBottom="true"
        android:hint="@string/anfangstext"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:maxLines="200"
        android:scrollbars="vertical"
        android:background="#80D0D0D0" />

</RelativeLayout>